# lab-avancado1

./: README.md  lab_avançado_interferometro_fft.ipynb
.devcontainer/: devcontainer.json
velocidade_da_luz/: pyproject.toml
velocidade_da_luz/espelhos_girantes/: analise.ipynb
velocidade_da_luz/experimento-luz-senoidal/: analise.ipynb  comentarios.txt
velocidade_da_luz/experimento-luz-senoidal/dados_bons/: comentarios.txt
velocidade_da_luz/experimento-luz-senoidal/dados_bons/ar_lente_boa/: dados.txt
velocidade_da_luz/experimento-luz-senoidal/dados_bons/vidro_lente_boa/: dados.txt
velocidade_da_luz/experimento-luz-senoidal/dados_ruins_ou_incompletos/: comentarios.txt
velocidade_da_luz/experimento-luz-senoidal/dados_ruins_ou_incompletos/ar/: dados.txt
velocidade_da_luz/experimento-luz-senoidal/dados_ruins_ou_incompletos/ar_com_lente/: dados.txt
velocidade_da_luz/experimento-luz-senoidal/dados_ruins_ou_incompletos/ar_com_lente_2/: dados.txt
velocidade_da_luz/experimento-luz-senoidal/dados_ruins_ou_incompletos/caixa_com_agua/: dados.csv
velocidade_da_luz/experimento-luz-senoidal/dados_ruins_ou_incompletos/cilindro_vidro/dados_com/: dados.txt
velocidade_da_luz/experimento-luz-senoidal/dados_ruins_ou_incompletos/cilindro_vidro/dados_sem/: dados.txt
velocidade_da_luz/pulsos/: decovolution.py  main.py  parsing.py  pulsos.py  pyproject.toml
velocidade_da_luz/pulsos/1/: dados_1.csv
velocidade_da_luz/pulsos/2/: dados_2.csv
velocidade_da_luz/pulsos/3/: dados_3.csv
velocidade_da_luz/pulsos/4/: dados_4.csv
velocidade_da_luz/romer/: analise.ipynb
(+90 files in other folders)
