[project]
name = "velocidade-da-luz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.1.0",
    "ipykernel>=6.30.1",
    "labifsc2>=0.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scipy>=1.16.2",
]
